--- a/AndroidApp/res/layout/activity_main.xml
+++ b/AndroidApp/res/layout/activity_main.xml
@@ -68,9 +68,10 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/offlineButton"
+            android:id="@+id/recoverPasswordButton"
+            style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/loginOfflineMode" />
+            android:text="@string/recoverPassword_button" />
 
     </LinearLayout>
