--- a/AndroidApp/res/menu/main.xml
+++ b/AndroidApp/res/menu/main.xml
@@ -1,8 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"/>
+    <item android:id="@+id/mDbSync" android:title="@string/mDbSync"></item>
+    <item android:id="@+id/mPersonalStats" android:title="@string/personal_button"></item>
 
 </menu>
