Routen sortierung, WebApi change
Routen werden jetzt nach BoltRow in der Routenliste sortiert.
Die WebApi gibt nurnoch Routen an die App weiter die in der Halle sind.
In der Routenliste wird nun der Titel je nach Filter geändert.
Rotpunkt wird nun auf der Ampel als Grün angezeigt
Einige kleine Namens und Layout änderungen.

--- a/AndroidApp/res/layout/activity_rateroute.xml
+++ b/AndroidApp/res/layout/activity_rateroute.xml
@@ -25,8 +25,9 @@
 
             <TextView
                 android:id="@+id/raterouteRatingLable"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.7"
                 android:text="@string/rateroute_rating"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -46,8 +47,9 @@
 
             <TextView
                 android:id="@+id/raterouteClimbedLable"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.7"
                 android:text="@string/rateroute_climbed"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -66,8 +68,9 @@
 
             <TextView
                 android:id="@+id/raterouteCategorieLable"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.7"
                 android:text="@string/rateroute_categorie"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
