Thread changes(AsyncTask), Bug fixes
Scrollview für Login und Register eingefügt.
nicht geklettert aus der Routen Statistik entfernt.
Routenliste springt nun zurück auf die ausgewählte Route nachdem man aus
den Routendetails zurück geht.
UI Sollte nun flüssiger laufen da der UI Thread von AsyncTask nichtmehr
blockiert wird. Stattdessen gibt es nun eine DBSync AsyncTask Klasse die
das Laden der Daten und das Parsen übernimmt.
Die App sollte nun auch nichtmehr abstürzen wenn es beim Laden der Daten
aus dem Web zu einem Timeout kommt.
Fehler in PieChart behoben der beim Zeichnen dazu führen Konnte das eine
Linie von einem Kuchenstück überdeckt wurde.
Fehler in der AvarageRating berechnung der App behoben durch den keine
geraden Wertungen möglich waren.

--- a/AndroidApp/res/layout/activity_routedetails.xml
+++ b/AndroidApp/res/layout/activity_routedetails.xml
@@ -31,7 +31,7 @@
             android:id="@+id/routedetailsNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </LinearLayout>
 
@@ -129,7 +129,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/raterouteButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10pt"
+        android:text="@string/rateroute_button" />
     
     <RelativeLayout
         android:layout_width="match_parent"
@@ -227,26 +235,6 @@
             android:layout_alignParentRight="true"
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </RelativeLayout>
-    
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <TextView
-            android:id="@+id/routedetailsNotclimbedcountLable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/notclimbedcount"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/routedetailsNotclimbedcount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    </RelativeLayout>
 
     <ImageView
         android:id="@+id/routedetailsPieChart"
@@ -319,12 +307,6 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:visibility="gone" />
     </RelativeLayout>
-
-    <Button
-        android:id="@+id/raterouteButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/rateroute_button" />
 
 </LinearLayout>
 </ScrollView>
