--- a/AndroidApp/res/layout/activity_register.xml
+++ b/AndroidApp/res/layout/activity_register.xml
@@ -1,7 +1,11 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent" 
+    xmlns:tools="http://schemas.android.com/tools">
+
+<LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -33,7 +37,8 @@
                 android:id="@+id/registerUsernameText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10" android:inputType="text"/>
+                android:ems="10" android:inputType="text">
+            </EditText>
 
         </LinearLayout>
 
@@ -54,8 +59,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10" android:inputType="textEmailAddress">
-
-                <requestFocus />
             </EditText>
         </LinearLayout>
 
@@ -120,3 +123,4 @@
 
         </LinearLayout>
 </LinearLayout>
+</ScrollView>
