WebAdmin hinzugefügt, DBSync mit Timestamp
WebAdmin Page erstellt.
Timestamp zur DBSync hinzugefügt sodass er nichtmehr alle Routen bei
jeder Synchro updaten muss.
Routenbewertung ändern hinzufügen.
Schwierigkeitsgrad preSelect in der Android App hinzugefügt.
Passwort ändern im Menü der App hinzufügt.
Kategorie leer hinzufügen bei Routen bewerten.

--- a/AndroidApp/res/menu/main.xml
+++ b/AndroidApp/res/menu/main.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/mDbSync" android:title="@string/mDbSync"></item>
     <item android:id="@+id/mPersonalStats" android:title="@string/personal_button"></item>
-
+    <item android:id="@+id/mPasswordChange" android:title="@string/passwordChange"></item>
 </menu>
